<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hora_do_quiz_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wrap_login"/>

        <RelativeLayout
            android:id="@+id/wrap_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="8dp">

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/info_login"
                app:cardElevation="4dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtUser"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:hint="@string/exemplo_usuario"
                    android:text="@string/exemplo_usuario_"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_singleLineEllipsis="true"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtPassword"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:hint="@string/exemplo_senha"
                    android:text="@string/exemplo_senha_"
                    android:inputType="textPassword"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_singleLineEllipsis="true"/>

            </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_below="@id/info_login"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_sign_up"
                    android:text="@string/exemplo_registrese"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_sign_in"
                    android:text="@string/exemplo_entrar"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>


</RelativeLayout>